// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SubmitModal component matches the snapshot on success 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  bottom: 1rem;
  left: 50%;
  transform: translateX(-50%);
  width: min(32rem, calc(100vw - 2rem));
  min-height: 3rem;
  padding: 0.5rem 0.75rem;
  background-color: #42ba96;
  color: #ffffff;
  border-radius: 0.3rem;
  border: 1px solid rgba(26, 103, 74, 0.6);
  box-shadow: 0 12px 28px rgba(0, 0, 0, 0.2);
  z-index: 7;
}

.c1 {
  font-size: 1rem;
  line-height: 1.35;
  font-weight: 600;
  margin: 0;
  text-align: center;
}

<div
    class="c0"
  >
    <p
      class="c1"
    />
  </div>
</DocumentFragment>
`;

exports[`SubmitModal component matches the snapshot snapshot on error 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  bottom: 1rem;
  left: 50%;
  transform: translateX(-50%);
  width: min(32rem, calc(100vw - 2rem));
  min-height: 3rem;
  padding: 0.5rem 0.75rem;
  background-color: #ff3333;
  color: #ffffff;
  border-radius: 0.3rem;
  border: 1px solid rgba(142, 32, 32, 0.65);
  box-shadow: 0 12px 28px rgba(0, 0, 0, 0.2);
  z-index: 7;
}

.c1 {
  font-size: 1rem;
  line-height: 1.35;
  font-weight: 600;
  margin: 0;
  text-align: center;
}

<div
    class="c0"
  >
    <p
      class="c1"
    />
  </div>
</DocumentFragment>
`;
